[package]
name = "clobber"
version = "0.1.0"
authors = ["Ryan Ragona <ryanragona@gmail.com>"]
edition = "2018"

[features]
tuning = ["fern", "chrono", "tempfile"]

[dependencies]
log = "0.4.8"
crossbeam-channel = "0.4.2"

# Used for log output with the `tuning` flag
fern = {version = "0.6.0", optional = true}
chrono = {version = "0.4.11", optional = true}
tempfile = {version = "3.1.0", optional = true}

[dependencies.async-std]
version = "1.6.2"
features = ["unstable"]

[dev-dependencies]
surf = "2.0.0-alpha.4"
warp = "0.2.3"
http-types = "2.2.1"
futures-await-test = "0.3.0"
tokio = "0.2.21"