[package]
name = "clobber"
version = "0.1.0"
authors = ["Ryan Ragona <ryanragona@gmail.com>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14.5", features = ["full"] }
tokio = { version = "1.3.0", features = ["full", "tracing"] }
futures = "0.3.13"

[dev-dependencies]
warp = "0.3.0"
actix-web = "4.0.0-beta.5"